
2019-07-31 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The check for is_resource is not sufficient, because a closed resource returns FALSE.

2019-07-04 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 9.5
    * no any more support for TYPO3 7
    * bugfix: JambageCom\\FhDebug\\Hooks\\CoreProductionExceptionHandler must not be used with $GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Core\\Error\\ProductionExceptionHandler'] because the Core Bootstrap does not support this. You must use the Install Tool to use this exception handler.

2019-03-18 Franz Holzinger <franz@ttproducts.de>
    * delay the trace array inversion. The index of the trace array shall start from 0 and increase continually.

2019-03-14 Franz Holzinger <franz@ttproducts.de>
    * bugfix to the new partfiles feature

2019-03-12 Franz Holzinger <franz@ttproducts.de>
    * new feature: partfiles give a list of files from which one must be included in the backtrace in order to generate a debug output
    * use new PHP feature: use the short call debug_backtrace(DEBUG_BACKTRACE_IGNORE_ARGS).
    * bugfix: setIsInitialization 

2019-03-06 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Do not add the id parameter to the title if append is used, because the debug output can come from many pages.
    * new feature: add the id parameter to debugBegin and debugEnd

2019-03-02 Franz Holzinger <franz@ttproducts.de>
    * new feature: Make the date time format configurable. Add a date time stamp with each debugBegin and debugEnd.

2019-02-08 Franz Holzinger <franz@ttproducts.de>
    * new feature: Determine the relative path to the domain for TYPO3 in order to determine the path to the CSS file

2018-12-14 Franz Holzinger <franz@ttproducts.de>
    * new feature: allow a prefix before the path to the CSS file

2018-10-17 Franz Holzinger <franz@ttproducts.de>