@@ -12,8 +12,8 @@ if (
     $extensionConfiguration = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance(
         \TYPO3\CMS\Core\Configuration\ExtensionConfiguration::class
     )->get(FH_DEBUG_EXT);
-} else if (isset($_EXTCONF)) {
-    $extensionConfiguration = unserialize($_EXTCONF);    // unserializing the configuration so we can use it here:
+} else {
+    $extensionConfiguration = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][FH_DEBUG_EXT]);
 }
 
 if (
